<resources>
    <string name="app_name">cuddly-octo-sniffle</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="testUsername">Sign Out? </string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_sign_up_here"> Don\'t have an account? Sign up Here! </string>
    <string name="please_log_in_to_continue">Please log in to continue</string>
    <string name="password">Password</string>
    <string name="email_address">Email address</string>
</resources>